--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@daveyplate/better-auth-ui": "^3.1.5",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
@@ -31,6 +34,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
